{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 39,
  "lineage": "5aa6377a-8c40-6e2a-7ed6-f548bb425271",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07681194242e68ce9",
            "association_id": "eipassoc-0a4a75f0a34bdf5f8",
            "domain": "vpc",
            "id": "eipalloc-07681194242e68ce9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b9f1030a860df2ce",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-131-150-87.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.150.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:045330257678:instance/i-044967285bf7616bf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044967285bf7616bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f17abab203293e66",
            "private_dns": "ip-10-0-2-92.us-east-2.compute.internal",
            "private_ip": "10.0.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce60c38dbf9635ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096093f94bb298da3",
            "tags": {
              "Name": "test_instance"
            },
            "tags_all": {
              "Name": "test_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-057c588fe7045645f"
            ]
          },
          "dependencies": [
            "aws_subnet.private_sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:internet-gateway/igw-0f58a6cdbbdfc9cc9",
            "id": "igw-0f58a6cdbbdfc9cc9",
            "owner_id": "045330257678",
            "tags": {
              "Name": "igw_day1"
            },
            "tags_all": {
              "Name": "igw_day1"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07681194242e68ce9",
            "connectivity_type": "public",
            "id": "nat-0f64f04862c842dba",
            "network_interface_id": "eni-0b9f1030a860df2ce",
            "private_ip": "10.0.1.165",
            "public_ip": "3.131.150.87",
            "subnet_id": "subnet-0532a8ef989298040",
            "tags": {
              "Name": "ngw_day1"
            },
            "tags_all": {
              "Name": "ngw_day1"
            }
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "aws_eip.main",
            "aws_subnet.public_sub1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-023e405d898035375",
            "id": "rtb-023e405d898035375",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f64f04862c842dba",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013831358ead68058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-01441ab7f2d7728a8",
            "id": "rtb-01441ab7f2d7728a8",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f58a6cdbbdfc9cc9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013831358ead68058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-0ad5530b5939c4f2d",
            "id": "rtb-0ad5530b5939c4f2d",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_pure_rt"
            },
            "tags_all": {
              "Name": "private_pure_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013831358ead68058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02df3fb5cf1d063b6",
            "route_table_id": "rtb-023e405d898035375",
            "subnet_id": "subnet-096093f94bb298da3"
          },
          "dependencies": [
            "aws_subnet.private_sub1",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbd59822bb7d6973",
            "route_table_id": "rtb-023e405d898035375",
            "subnet_id": "subnet-047037dba700c385c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub2",
            "aws_subnet.public_sub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5eaa6f341e46810",
            "route_table_id": "rtb-01441ab7f2d7728a8",
            "subnet_id": "subnet-0532a8ef989298040"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adffea715dd35be4",
            "route_table_id": "rtb-01441ab7f2d7728a8",
            "subnet_id": "subnet-0ff83cff2d78892dd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0608cd530c295524c",
            "route_table_id": "rtb-0ad5530b5939c4f2d",
            "subnet_id": "subnet-065085c44e3c1c535"
          },
          "dependencies": [
            "aws_subnet.private_pure_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "aws_route_table.pure"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019bf6c2f1e9043d6",
            "route_table_id": "rtb-0ad5530b5939c4f2d",
            "subnet_id": "subnet-048f133384f79c6a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_route_table.pure",
            "aws_subnet.private_pure_sub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_pure_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-065085c44e3c1c535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-065085c44e3c1c535",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_pure_sub1"
            },
            "tags_all": {
              "Name": "private_pure_sub1"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_pure_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-048f133384f79c6a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-048f133384f79c6a1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_pure_sub2"
            },
            "tags_all": {
              "Name": "private_pure_sub2"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-096093f94bb298da3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-096093f94bb298da3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_sub1"
            },
            "tags_all": {
              "Name": "private_sub1"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-047037dba700c385c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-047037dba700c385c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_sub2"
            },
            "tags_all": {
              "Name": "private_sub2"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-0532a8ef989298040",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0532a8ef989298040",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "public_sub1"
            },
            "tags_all": {
              "Name": "public_sub1"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-0ff83cff2d78892dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ff83cff2d78892dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "public_sub2"
            },
            "tags_all": {
              "Name": "public_sub2"
            },
            "vpc_id": "vpc-013831358ead68058"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:vpc/vpc-013831358ead68058",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09cb029550f86cb08",
            "default_route_table_id": "rtb-0d01cd8228b90a824",
            "default_security_group_id": "sg-057c588fe7045645f",
            "dhcp_options_id": "dopt-0c3097869e82d5955",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-013831358ead68058",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d01cd8228b90a824",
            "owner_id": "045330257678",
            "tags": {
              "Name": "vpc_day1"
            },
            "tags_all": {
              "Name": "vpc_day1"
            }
          }
        }
      ]
    }
  ]
}